# Cloud-Data-Engineering-Portfolio

./: .gitignore  README.md
.github/workflows/: gcp-sales-pipeline.yaml
01-GCP-Professional-Track/01-sales-data-pipeline-composer/: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  cloudbuild.yaml  pyproject.toml
01-GCP-Professional-Track/01-sales-data-pipeline-composer/.github/workflows/: ci.yml
01-GCP-Professional-Track/01-sales-data-pipeline-composer/config/: config.py
01-GCP-Professional-Track/01-sales-data-pipeline-composer/config/schemas/: sales_schema.yaml
01-GCP-Professional-Track/01-sales-data-pipeline-composer/docs/: technical_debt.md
01-GCP-Professional-Track/01-sales-data-pipeline-composer/src/: __init__.py  main.py
01-GCP-Professional-Track/01-sales-data-pipeline-composer/src/ecommerce_etl/: data_source.py  data_source_factory.py  factory.py  infra_protocols.py  io_factory.py  io_manager.py  source_validator.py  transforms.py
01-GCP-Professional-Track/01-sales-data-pipeline-composer/tests/: conftest.py
01-GCP-Professional-Track/01-sales-data-pipeline-composer/tests/integration/: test_gcs_io.py  test_save_to_gold.py
01-GCP-Professional-Track/01-sales-data-pipeline-composer/tests/unit/: test_data_source.py  test_data_source_factory.py  test_factory.py  test_io_factory.py  test_io_manager.py  test_source_validator.py  test_transforms.py
