[project]
name = "gcp-ecommerce-etl"
version = "0.1.0"
description = ""
authors = [
    {name = "ori07",email = "oriana.miranda.soto@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "google-cloud-storage (>=3.7.0,<4.0.0)",
    "google-cloud-bigquery (>=3.39.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
