[project]
name = "gcp-ecommerce-etl"
version = "0.1.0"
description = ""
authors = [
    {name = "ori07",email = "oriana.miranda.soto@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "google-cloud-storage (>=3.7.0,<4.0.0)",
    "google-cloud-bigquery (>=3.39.0,<4.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "gcsfs (>=2025.12.0,<2026.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.14.10,<0.15.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# Enable all default E (pycodestyle errors), F (pyflakes), and I (isort) rules
select = ["E", "F", "I"]
# Exclude certain files or directories from linting
exclude = ["venv", ".venv", "docs/*"]

[tool.ruff.format]
# Optional: Configure the formatter if you plan to use `ruff format`
quote-style = "double"

