[tool.poetry]
name = "gcp-ecommerce-etl"
version = "0.1.0"
description = "Pipeline ETL para procesamiento de datos de E-commerce"
authors = ["ori07 <gcp.tutorial.2026@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
google-cloud-storage = "^2.14.0"
google-cloud-bigquery = "^3.15.0"
pyarrow = "^15.0.0"
gcsfs = "^2024.2.0"
polars = "^1.37.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.3.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
exclude = ["venv", ".venv", "docs/*"]

[tool.ruff.format]
quote-style = "double"
